# somnia_android

./: .gitignore  BUILD_ANDROID.md  package-lock.json  pyproject.toml  requirements.txt
somnia/: __init__.py
somnia-app/: app.json  package.json  tsconfig.json
somnia-app/android/: settings.gradle
somnia-app/android/app/: build.gradle
somnia-app/app/: _layout.tsx
somnia-app/app/(tabs)/: _layout.tsx  coach.tsx  diary.tsx  health.tsx  index.tsx  progress.tsx  settings.tsx
somnia-app/app/onboarding/: index.tsx  isi.tsx
somnia-app/components/: BedtimeCard.tsx  ChatBubble.tsx  ISISlider.tsx  MetricCard.tsx  SleepStageBar.tsx  index.ts
somnia-app/constants/: clinical.ts  index.ts  theme.ts
somnia-app/services/: api.ts  apple-health.ts  health-connect.ts  index.ts  oura.ts  wearable.ts
somnia-app/stores/: useAppStore.ts
somnia-app/types/: coach.ts  index.ts  metrics.ts  sleep.ts
somnia-dashboard/: package-lock.json  package.json
somnia-dashboard/app/: layout.tsx
somnia-dashboard/app/auth/: page.tsx
somnia-dashboard/app/dashboard/: layout.tsx  page.tsx
somnia-dashboard/components/charts/: TrajectoryChart.tsx
somnia-dashboard/lib/: clinical.ts  mock-data.ts
somnia-dashboard/types/: index.ts
somnia/api/: app.py  routes.py
somnia/metrics/: __init__.py  ai.py  cas.py  crs.py  rt.py  sdi.py  sei.py
somnia/pipeline/: coach_context.py  compute.py
somnia/schemas/: derived_metrics.py  raw_sleep_record.py
somnia/tests/: test_apple_health.py  test_health_connect.py  test_metrics.py  test_oura_client.py  test_oura_parsers.py  test_pipeline.py
(+58 files in other folders)
